executable(
    'app', 
    dependencies: [
        boost_dep,
        fmt_dep,
        openssl_dep
    ],
    sources: files([
        'client.cpp',
        'client_transport.cpp',
        'client_transport_plain.cpp',
        'client_transport_tls.cpp',
        'log.cpp',
        'main.cpp'
    ])
)